# picore

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.be119cc  README.md  aux_spi.c  aux_spi.cpp  cpu.c  cstubs.c  dht11.c  dma.c  ds1621.c  exceptions_handlers.c  findPICORE.cmake  gpio.c  hypervisor.c  i2c.c  init.c  main.c  modules.c  monitor.c  mu_uart.c  picore-config.cmake.in  picore.cmake  picore.ld  raio8870.c  scheduler.S  spi.c  startup.S  startup.s  supervisor.c  system.c  task.c  tft.c  timer.c
app/: APP.cbp  CMakeLists.txt  cmake_install.cmake
app/include/: modules.h
app/src/: main.c  modules.c
asm/: CMakeLists.txt  startup.s
doc/: PCB.txt
include/: asm-def.h  aux_spi.h  board_header.h  configure.h.in  cpu.h  dht11.h  display.h  dma.h  ds1621.h  exceptions_handlers.h  gpio.h  hypervisor.h  i2c.h  init.h  modules.h  monitor.h  mu_uart.h  page.h  raio8870.h  spi.h  supervisor.h  system.h  task.h  tft.h  timer.h  uart.h
pkg/: picore-config.cmake.in
